footer fix on mobile, FB link commented

--- a/styles/main.css
+++ b/styles/main.css
@@ -59,10 +59,6 @@ h2 {
   font-size: 40px;
 }
 
-.newsletter {
-  padding-bottom: 80px;
-}
-
 #mailchimp {
   max-width: 400px;
 }
@@ -85,6 +81,10 @@ footer {
 @media (max-width: 400px) {
   body {
     background-image: none;
+  }
+  footer {
+    position: static;
+    margin: 30px 0;
   }
 }
 
